@@ -16,12 +16,16 @@
 		</SPAN>
 
 		<!-- JavaScript -->
-		<SEQ_REGEXP TYPE="MARKUP" DELEGATE="SCRIPT_TAG"
-					HASH_CHAR="&lt;">&lt;(?=SCRIPT\b)</SEQ_REGEXP>
+		<SPAN_REGEXP TYPE="MARKUP" DELEGATE="JAVASCRIPT" HASH_CHAR="&lt;">
+			<BEGIN>&lt;(?=SCRIPT\b)</BEGIN>
+			<END REGEXP="TRUE">(?i)(?=&lt;/SCRIPT\b)</END>
+		</SPAN_REGEXP>
 
 		<!-- stylesheet -->
-		<SEQ_REGEXP TYPE="MARKUP" DELEGATE="STYLE_TAG"
-					HASH_CHAR="&lt;">&lt;(?=STYLE\b)</SEQ_REGEXP>
+		<SPAN_REGEXP TYPE="MARKUP" DELEGATE="CSS" HASH_CHAR="&lt;">
+			<BEGIN>&lt;(?=STYLE\b)</BEGIN>
+			<END REGEXP="TRUE">(?i)(?=&lt;/STYLE\b)</END>
+		</SPAN_REGEXP>
 
 		<!-- DTD instructions -->
 		<SPAN TYPE="KEYWORD2" DELEGATE="xml::DTD-TAGS">
@@ -35,16 +39,10 @@
 			<END>&gt;</END>
 		</SPAN>
 
-		<!-- SGML entities -->
-		<SPAN TYPE="LITERAL2" NO_WORD_BREAK="TRUE">
-			<BEGIN>&amp;</BEGIN>
-			<END>;</END>
-		</SPAN>
+		<!-- SGML character entities -->
+		<IMPORT DELEGATE="CHARACTER_ENTITIES" />
 	</RULES>
 
-	<!-- ESCAPE is not exactly right but it is needed to correctly
-	     handle JavaScript in on* parameters.
-             NOTE: ESCAPE moved from RULE to SPANs! -->
 	<RULES SET="TAGS" DEFAULT="MARKUP">
 		<!-- Inline CSS -->
  		<SPAN_REGEXP AT_WORD_START="TRUE" TYPE="MARKUP" DELEGATE="css::PROPERTIES" HASH_CHAR="style">
@@ -59,11 +57,11 @@
 		</SPAN_REGEXP>
 
 		<!-- NOTE: no ESCAPE for quotes, at least for attributes; e.g onclick="alert(\"foo\");" is invalid! -->
-		<SPAN TYPE="LITERAL1" DELEGATE="STRING">
+		<SPAN TYPE="LITERAL1" DELEGATE="ATTRIBUTE">
 			<BEGIN>"</BEGIN>
 			<END>"</END>
 		</SPAN>
-		<SPAN TYPE="LITERAL1" DELEGATE="STRING">
+		<SPAN TYPE="LITERAL1" DELEGATE="ATTRIBUTE">
 			<BEGIN>'</BEGIN>
 			<END>'</END>
 		</SPAN>
@@ -200,7 +198,7 @@
 	</RULES>
 
 	<!-- SCRIPT tag: Highlight tag and switch to language ruleset. -->
-	<RULES SET="SCRIPT_TAG" DEFAULT="MARKUP">
+	<RULES SET="JAVASCRIPT" DEFAULT="MARKUP">
 		<!--If the content of the TYPE attribute is recognized, switch to
 			language specific ruleset. -->
 		<SEQ_REGEXP TYPE="MARKUP" DELEGATE="COFFEESCRIPT_TAG"
@@ -218,134 +216,61 @@
 		<SEQ_REGEXP TYPE="MARKUP" DELEGATE="XQUERY_SCRIPT_TAG"
 					HASH_CHAR="type">type(?=\s*=\s*['"]?\w+/xquery)</SEQ_REGEXP>
 		<!-- Switch to JavaScript ruleset after the tag. -->
-		<SEQ TYPE="MARKUP" DELEGATE="JAVASCRIPT">&gt;</SEQ>
+		<SEQ TYPE="MARKUP" DELEGATE="javascript::MAIN">&gt;</SEQ>
 		<!-- Import rules for highlighting. -->
 		<IMPORT DELEGATE="TAGS"/>
 	</RULES>
 
-	<!-- JavaScript (NOTE: RULES attributes must match the imported rules.)-->
-	<RULES SET="JAVASCRIPT" 
-		IGNORE_CASE="FALSE"
-		HIGHLIGHT_DIGITS="TRUE"
-		DIGIT_RE="(0x[\p{XDigit}]+[lL]?|[\p{Digit}]+(e[\p{Digit}]*)?[lLdDfF]?)">
-		<!-- "Override" comments to avoid consuming the </SCRIPT> tag. -->
-		<SPAN_REGEXP TYPE="COMMENT1" HASH_CHAR="/*">
-			<BEGIN>/\*</BEGIN>
-			<END REGEXP="TRUE">(?i)(?=&lt;/SCRIPT\b)</END>
-		</SPAN_REGEXP>
-		<SEQ_REGEXP TYPE="COMMENT2" HASH_CHAR="//">(?i)//.*(?=&lt;/SCRIPT\b)</SEQ_REGEXP>
-		<!-- If closing </SCRIPT> tag is found, switch to ENDTAG ruleset. -->
-		<SEQ_REGEXP TYPE="MARKUP" DELEGATE="ENDTAG"
-					HASH_CHAR="&lt;">(?i)&lt;(?=/SCRIPT\b)</SEQ_REGEXP>
-		<!-- Import rules for JavaScript mode. -->
-		<IMPORT DELEGATE="javascript::MAIN"/>
-	</RULES>
-
 	<!-- CoffeeScript -->
 	<RULES SET="COFFEESCRIPT_TAG" DEFAULT="MARKUP">
-		<SEQ TYPE="MARKUP" DELEGATE="COFFEESCRIPT">&gt;</SEQ>
+		<SEQ TYPE="MARKUP" DELEGATE="coffeescript::MAIN">&gt;</SEQ>
 		<IMPORT DELEGATE="TAGS"/>
-	</RULES>
-	<RULES SET="COFFEESCRIPT"
-		IGNORE_CASE="FALSE"
-		HIGHLIGHT_DIGITS="TRUE"
-		NO_WORD_SEP="$_"
-		DIGIT_RE="(0b[01]+)|(0o[0-7]+)|(0x\p{XDigit}+)|(\d*\.?\d+(e[+-]?\d+)?)">
-		<SPAN_REGEXP TYPE="COMMENT2" HASH_CHAR="###">
-			<BEGIN>###(?!#)</BEGIN>
-			<END REGEXP="TRUE">(?i)(?=&lt;/SCRIPT\b)</END>
-		</SPAN_REGEXP>
-		<SEQ_REGEXP TYPE="COMMENT1" HASH_CHAR="#">(?i)#.*(?=&lt;/SCRIPT\b)</SEQ_REGEXP>
-		<SEQ_REGEXP TYPE="MARKUP" DELEGATE="ENDTAG"
-					HASH_CHAR="&lt;">(?i)&lt;(?=/SCRIPT\b)</SEQ_REGEXP>
-		<IMPORT DELEGATE="coffeescript::MAIN"/>
 	</RULES>
 
 	<!-- Python - provided by Gestalt -->
 	<RULES SET="PYTHON_SCRIPT_TAG" DEFAULT="MARKUP">
-		<SEQ TYPE="MARKUP" DELEGATE="PYTHON">&gt;</SEQ>
+		<SEQ TYPE="MARKUP" DELEGATE="python::MAIN">&gt;</SEQ>
 		<IMPORT DELEGATE="TAGS"/>
-	</RULES>
-	<RULES SET="PYTHON" IGNORE_CASE="FALSE" HIGHLIGHT_DIGITS="TRUE">
-		<SEQ_REGEXP TYPE="COMMENT1" HASH_CHAR="#">(?i)#.*(?=&lt;/SCRIPT\b)</SEQ_REGEXP>
-		<SEQ_REGEXP TYPE="MARKUP" DELEGATE="ENDTAG"
-					HASH_CHAR="&lt;">(?i)&lt;(?=/SCRIPT\b)</SEQ_REGEXP>
-		<IMPORT DELEGATE="python::MAIN"/>
 	</RULES>
 
 	<!-- Ruby - provided by Gestalt -->
 	<RULES SET="RUBY_SCRIPT_TAG" DEFAULT="MARKUP">
-		<SEQ TYPE="MARKUP" DELEGATE="RUBY">&gt;</SEQ>
+		<SEQ TYPE="MARKUP" DELEGATE="ruby::MAIN">&gt;</SEQ>
 		<IMPORT DELEGATE="TAGS"/>
-	</RULES>
-	<RULES SET="RUBY" IGNORE_CASE="FALSE" HIGHLIGHT_DIGITS="TRUE"
-		DIGIT_RE="(0b[01]([01_]*[01])?)|(0x[\p{XDigit}]([\p{XDigit}_]*[\p{XDigit}])?)|(0([0-7_]*[0-7])?)|(0d[0-9]([0-9_]*[0-9])?)|([1-9]([0-9_]*[0-9])?)|([0-9]([0-9_]*[0-9])?[Ee]([0-9]([0-9_]*[0-9])?)?)">
-		<SEQ_REGEXP TYPE="COMMENT1" HASH_CHAR="#">(?i)#.*(?=&lt;/SCRIPT\b)</SEQ_REGEXP>
-		<SEQ_REGEXP TYPE="MARKUP" DELEGATE="ENDTAG"
-					HASH_CHAR="&lt;">(?i)&lt;(?=/SCRIPT\b)</SEQ_REGEXP>
-		<IMPORT DELEGATE="ruby::MAIN"/>
 	</RULES>
 
 	<!-- VBScript - provided by Internet Explorer -->
 	<RULES SET="VBSCRIPT_TAG" DEFAULT="MARKUP">
-		<SEQ TYPE="MARKUP" DELEGATE="VBSCRIPT">&gt;</SEQ>
+		<SEQ TYPE="MARKUP" DELEGATE="vbscript::MAIN">&gt;</SEQ>
 		<IMPORT DELEGATE="TAGS"/>
-	</RULES>
-	<RULES SET="VBSCRIPT" HIGHLIGHT_DIGITS="TRUE">
-		<SEQ_REGEXP TYPE="COMMENT1" HASH_CHAR="'">'.*(?=&lt;/SCRIPT\b)</SEQ_REGEXP>
-		<SEQ_REGEXP TYPE="COMMENT1" HASH_CHAR="rem">rem(\b.*)?(?=&lt;/SCRIPT\b)</SEQ_REGEXP>
-		<SEQ_REGEXP TYPE="MARKUP" DELEGATE="ENDTAG"
-					HASH_CHAR="&lt;">&lt;(?=/SCRIPT\b)</SEQ_REGEXP>
-		<IMPORT DELEGATE="vbscript::MAIN"/>
 	</RULES>
 
 	<!-- XML - for XAML, provided by Gestalt -->
 	<RULES SET="XML_SCRIPT_TAG" DEFAULT="MARKUP">
-		<SEQ TYPE="MARKUP" DELEGATE="XML">&gt;</SEQ>
+		<SEQ TYPE="MARKUP" DELEGATE="xml::MAIN">&gt;</SEQ>
 		<IMPORT DELEGATE="TAGS"/>
-	</RULES>
-	<RULES SET="XML">
-		<SEQ_REGEXP TYPE="MARKUP" DELEGATE="ENDTAG"
-					HASH_CHAR="&lt;">&lt;(?=/SCRIPT\b)</SEQ_REGEXP>
-		<IMPORT DELEGATE="xml::MAIN"/>
 	</RULES>
 
 	<!-- XQUERY - provided by XQIB -->
 	<RULES SET="XQUERY_SCRIPT_TAG" DEFAULT="MARKUP">
-		<SEQ TYPE="MARKUP" DELEGATE="XQUERY">&gt;</SEQ>
+		<SEQ TYPE="MARKUP" DELEGATE="xq::MAIN">&gt;</SEQ>
 		<IMPORT DELEGATE="TAGS"/>
-	</RULES>
-	<RULES SET="XQUERY">
-		<SEQ_REGEXP TYPE="MARKUP" DELEGATE="ENDTAG"
-					HASH_CHAR="&lt;">&lt;(?=/SCRIPT\b)</SEQ_REGEXP>
-		<IMPORT DELEGATE="xq::MAIN"/>
 	</RULES>
 
 	<!-- STYLE tag: Highlight tag and delegate to CSS mode. -->
-	<RULES SET="STYLE_TAG" DEFAULT="MARKUP">
-		<SEQ TYPE="MARKUP" DELEGATE="CSS">&gt;</SEQ>
+	<RULES SET="CSS" DEFAULT="MARKUP">
+		<SEQ TYPE="MARKUP" DELEGATE="css::MAIN">&gt;</SEQ>
 		<IMPORT DELEGATE="TAGS"/>
 	</RULES>
 
-	<RULES SET="CSS"
-	    HIGHLIGHT_DIGITS="TRUE"
-		DIGIT_RE="-?\d+(\.\d+)?(pt|pc|in|mm|cm|em|ex|px|ms|s|%|)"
-		NO_WORD_SEP="-_%">
-		<SEQ_REGEXP TYPE="MARKUP" DELEGATE="ENDTAG"
-					HASH_CHAR="&lt;">&lt;(?=/STYLE\b)</SEQ_REGEXP>
-		<IMPORT DELEGATE="css::MAIN"/>
+	<RULES SET="ATTRIBUTE" DEFAULT="LITERAL1">
+		<IMPORT DELEGATE="CHARACTER_ENTITIES" />
 	</RULES>
 
-	<!-- Closing tag: Highlight tag and return to MAIN ruleset. -->
-	<RULES SET="ENDTAG" DEFAULT="MARKUP">
-		<SEQ TYPE="MARKUP" DELEGATE="MAIN">&gt;</SEQ>
-		<IMPORT DELEGATE="TAGS"/>
+	<!-- SGML character entities - to be used with IMPORT tag -->
+	<RULES SET="CHARACTER_ENTITIES">
+		<SEQ_REGEXP TYPE="LITERAL2"
+					HASH_CHAR="&amp;">&amp;(#\d+|#x\p{XDigit}+|\p{Alnum}+);</SEQ_REGEXP>
+		<SEQ TYPE="INVALID">&amp;</SEQ>
 	</RULES>
-	
- 	<RULES SET="STRING" DEFAULT="LITERAL1">
- 		<SPAN TYPE="LITERAL2" NO_WORD_BREAK="TRUE">
- 			<BEGIN>&amp;</BEGIN>
- 			<END>;</END>
- 		</SPAN>
- 	</RULES>	
 </MODE>
